Fix spacing between text blocks
- Header using padding results in less code
- Using gap makes sure left space is not double
sized

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex; 
   justify-content: space-between;
   align-items: center;  
+  padding: 8px; 
 }
 
 .logo {
@@ -12,7 +13,6 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: 8px; 
 }
 
 ul {
@@ -20,13 +20,14 @@ ul {
   list-style-type: none;
   display: flex; 
   padding: 0px; 
+  margin: 0px; 
+  gap: 8px; 
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
-  margin: 8px; 
   /* this removes the line under the links */
-  text-decoration: none;
+  text-decoration: none; 
 }
